# Meddata-Toolkit

./: .gitignore  CONTRIBUTING.md  README.md  README_EN.md  VSCode使用说明.md  diagnose.py  launcher.py  pyproject.toml  requirements-runtime.txt  requirements.txt  run_fill_data.bat  run_launcher.bat  run_tool1.bat  run_tool2.bat  run_tool3.bat  run_tool4.bat  setup.py  使用说明.bat  启动参考文献验证工具.bat  启动工具.bat  启动工具.py  启动论文格式化工具.bat  工具使用指南.md  快速清理.py  诊断环境.bat  项目说明.md
.github/workflows/: ci.yml
Medical_Manuscript_Formatter/: README_CN.md
docs/: DEVELOPMENT.md  填充Case数据工具使用指南.md  批量合并使用指南.md  批量合并功能演示.md  项目清理总结.md
examples/: README.md  basic_file_analysis.py  fill_case_data_example.py  merged_example.xlsx  original_example.xlsx  quality_assessment_demo.py  sample_missing.csv  sample_missing_filled.csv  基础文件分析.py
src/mdip/: __init__.py
src/mdip/cli/: __init__.py  main.py
src/mdip/config/: __init__.py  default_config.py  field_config.py  match_config.py
src/mdip/core/: matcher.py  quality_control.py  reporter.py  validation.py
src/mdip/utils/: data_utils.py
tests/: conftest.py  test_matcher.py  test_quality_control.py
tools/: README.md  advanced_merge_gui.py  check_join_fields.py  cross_merge_gui.py  deduplicate_tool.py  fill_case_data.py  merge_tool_gui.py  professional_merge_gui.py
tools/Medical_Manuscript_Formatter/: README.md  format_manuscript.py  run_formatter.bat
tools/Medical_Reference_Verifier/: README.md  README_CN.md  references.txt  run_verifier.bat  verify_medical_references.py
