[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_configs = true
